added spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+# Security
+#spring.security.user.name=Jagan
+#spring.security.user.password=Jagan@305
+
 flight.date.invalid=Date should be today's date or future.
 flight.data.notfound= No flights found on selected date.
 
