--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ booking.invalid.passengers=Number of passengers more than 0 and less than 5
 
 booking.flight.notfound = Flight not found.
 booking.flight.seats.notavailable = Not enough seats available.
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/v3/api-docs
